--- a/vercel.json
+++ b/vercel.json
@@ -1,9 +1,9 @@
 {
-    "version": 1,
+    "version": 2,
     "builds": [
         {
             "src": "*.py",
-            "use": "@liudonghua123/now-flask"
+            "use": "@hizidha/ml-shipscrew"
         }
     ],
     "routes": [
